# escapucirust

./: .gitignore  Cargo.toml  Cheat sheet.txt  TODO  deploy.sh  index.html  temp_table_results_consolidated.txt
archive/: onclick_listener.rs
src/: global_state.rs  intro.rs  main.rs  onclick_listener.rs  outro.rs  start_screen.rs
src-tauri/: tauri.conf.json
src/gaming_board/: current_room.rs  inventory.rs  map.rs  mod.rs  narration.rs  opened_item.rs
src/gaming_board/rooms/: hall_face_down.rs  hall_face_up.rs  mod.rs
src/global_state/: mod.rs  reducers.rs  structs.rs
src/intro/: mod.rs
src/items/: generation.rs  mod.rs
src/rooms/: book_pile.rs  chess_board.rs  dining_room_face_up.rs  door_gui1.rs  door_mart1.rs  door_rom1.rs  door_room_rom1.rs  door_tiph1.rs  drawers.rs  electrical_panel.rs  eletrical_panel.rs  first_floor_face_down.rs  frigogidaire.rs  generate_room.rs  generation.rs  generations.rs  hall_face_down.rs  hall_face_up.rs  kitchen_face_down.rs  kitchen_face_left.rs  living_room_face_right.rs  living_room_face_up.rs  lock_room_gui1.rs  lock_room_rom1.rs  macros.rs  mod.rs  onclick_listener.rs  pool_face_down.rs  pool_face_left.rs  room_gui1.rs  room_mart1.rs  room_rom1.rs  room_tiph1.rs  stairs_face_up.rs  strips_podium.rs
src/store/: game_status.rs  global_state.rs  house.rs  house_state.rs  items.rs  macros.rs  mod.rs  narration.rs
static/css/: app.css  gaming_board.css  intro.css  inventory.css  map.css  narration.css  opened_item.css  rooms.css  start_screen.css
