[package]
	edition = "2021"
	name = "yew-app"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	gloo = "0.8"
	js-sys = "0.3"
	# onclick_listener = { path = "onclick_listener" }
	web-sys = { version = "0.3", features = ["EventTarget", "EventListener"] }
	yew = { version = "0.20", features = ["csr"] }
