[package]
	edition = "2021"
	name = "escapucina"
	version = "0.1.0"

[dependencies]
	gloo = "0.8"
	gloo-events = "0.1"
	js-sys = "0.3"
	lazy_static = "1"
	paste = "1"
	web-sys = { version = "0.3", features = ["EventTarget", "EventListener", "HtmlCollection"] }
	yew = { version = "0.20", features = ["csr"] }
